# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = \
    kc-object.h \
    kc-environment.h \
    kc-string.h \
    kc-web-server.h \
    kc-web-client.h \
    kc-linked-list.h \
    kc-list.h \
    kc-mutex.h \
	kc-parameter.h \
	kc-json.h \
	kc-socket.h \
	kc-tcp-socket.h \
    kc.h
